--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     </section>
     <footer>
-        
+        <P>
+            Jalen Tyler, Corey Robinson, and Tyson Brown created the Python Pirates. The languages we used were Python, Javascript, css, html, bootstrap, github, and visual studios.
+        </P>
     </footer>
 </body>
 <script src="main.js"></script>
