--- a/about.html
+++ b/about.html
@@ -12,7 +12,25 @@
 <body>
     <header>
         <nav>
+            <div class="logo">
 
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/about.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="/api.html">API</a>
+                    </li>
+                    <li>
+                        <a href="/python.html">Python</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
     <section>
