--- a/about.html
+++ b/about.html
@@ -18,16 +18,16 @@
             <div class="menu">
                 <ul>
                     <li>
-                        <a href="YGT2002024/index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="YGT2002024/about.html">About Us</a>
+                        <a href="about.html">About Us</a>
                     </li>
                     <li>
-                        <a href="YGT2002024/api.html">API</a>
+                        <a href="api.html">API</a>
                     </li>
                     <li>
-                        <a href="YGT2002024/python.html">Python</a>
+                        <a href="python.html">Python</a>
                     </li>
                 </ul>
             </div>
