--- a/index.html
+++ b/index.html
@@ -69,14 +69,29 @@
                 Welcome to Python Pirates Webpage!
             </h1>
             <div class="grid-3">
-                <div class="item1 item">
-                    
+                <div class="card item">
+                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                    <div class="card-body">
+                        <h2 class="card-title">About Us</h2>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="about.html" class="btn btn-primary">Take a Look</a>
+                    </div>
                 </div>
-                <div class="item2 item">
-
+                <div class="card item">
+                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                    <div class="card-body">
+                        <h2 class="card-title">API's</h2>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="api.html" class="btn btn-primary">Let's Try It</a>
+                    </div>
                 </div>
-                <div class="item3 item">
-
+                <div class="card item">
+                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                    <div class="card-body">
+                        <h2 class="card-title">Python</h2>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="python.html" class="btn btn-primary">Explore...</a>
+                    </div>
                 </div>
             </div>
         </section>
