--- a/python.html
+++ b/python.html
@@ -29,10 +29,12 @@
             </nav>
         </header>
         <section>
-
+            <!---- Content Goes Here ------->
         </section>
         <footer>
-            
+            <P>
+                Python Pirates copywrites 2024. The languages we used were Python, Javascript, css, html, bootstrap, github, and visual studios.
+            </P>
         </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
