add slider image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
                 <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="https://placehold.it/1400x500" style="width:100%">
+                <img src="https://i.pinimg.com/736x/ee/fd/c4/eefdc4111e5a3eeffb5a5a8f573be522.jpg" style="width:100%">
                 <div class="text">Caption Two</div>
                 </div>
             
