--- a/api.html
+++ b/api.html
@@ -6,6 +6,7 @@
         <title>Python Pirates | Api</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="apistyle.css"/>
     </head>
     <body>
         <div>
@@ -28,21 +29,35 @@
                 </div>
             </nav>
         </header>
-        <section>
+        <section class="container text-center">
             <h1>Guess our team's favorite movies...</h1>
-            <button type="submit" onclick="return loadMovie()">Reveal Jalen's favorite movie</button>
-            <div>
-                <h3 id="movieTitle">???</h3>
-                <p id="movieDescription">???</p>
-                <img id="moviePicture"src="https://miro.medium.com/v2/resize:fit:620/1*kwN_Y8GNf2ZB6sNQxngVyw@2x.jpeg">???</img>
+            <button class="btn btn-success btn-lg" type="submit" onclick="return loadMovie()">Reveal Jalen's favorite movie</button>
+            <br>
+            <div class="card item">
+                <div class="card-body">
+                    <h3 id="movieTitle">???</h3>
+                    <p id="movieDescription">???</p>
+                </div>
+                <img id="moviePicture" class="card-img-top" src="https://miro.medium.com/v2/resize:fit:620/1*kwN_Y8GNf2ZB6sNQxngVyw@2x.jpeg">
             </div>
-            <button type="submit" onclick="return loadCoreyMovie()">Reveal Corey's favorite movie</button>
-            <div>
-                <h3 id="coreyMovieTitle">???</h3>
-                <p id="coreyMovieDescription">???</p>
-                <img id="coreyMoviePicture"src="https://miro.medium.com/v2/resize:fit:620/1*kwN_Y8GNf2ZB6sNQxngVyw@2x.jpeg">???</img>
+            <button class="btn btn-success btn-lg" type="submit" onclick="return loadCoreyMovie()">Reveal Corey's favorite movie</button>
+            <br>
+            <div class="card item">
+                <div class="card-body">
+                    <h3 id="coreyMovieTitle">???</h3>
+                    <p id="coreyMovieDescription">???</p>
+                </div>
+                <img id="coreyMoviePicture" class="card-img-top" src="https://miro.medium.com/v2/resize:fit:620/1*kwN_Y8GNf2ZB6sNQxngVyw@2x.jpeg">
             </div>
-            <link rel="stylesheet" type="text/css" href="apistyle.css"/>
+            <button class="btn btn-success btn-lg" type="submit" onclick="return loadTysonMovie()">Reveal Tyson's favorite movie</button>
+            <br>
+            <div class="card item">
+                <div class="card-body">
+                    <h3 id="tysonMovieTitle">???</h3>
+                    <p id="tysonMovieDescription">???</p>
+                </div>
+                <img id="tysonMoviePicture" class="card-img-top" src="https://miro.medium.com/v2/resize:fit:620/1*kwN_Y8GNf2ZB6sNQxngVyw@2x.jpeg">
+            </div>
         <script>
             async function loadMovie() {
                 const apiResponse = await fetch('https://api.themoviedb.org/3/search/movie?query=cars%202&api_key=1785381337e0e60f964d9e8112b6d400');
