add what calculate explain

--- a/python.html
+++ b/python.html
@@ -30,6 +30,8 @@
         </header>
         <section>
             <!---- Content Goes Here ------->
+            <h2>What was in the python calculater</h2>
+            <p>The calculater was made using python. I defined every sign. The I used a if else statements so that you can use each sign. </p>
         </section>
         <footer>
             <P>
