--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         </h1>
         <img class="img" src="corey.jpg">
         </div>
-      <p style="background-color: white;">Corey Robinson, Sandtown middle, 7th Grade, viedo games, 12, favorite part about YGT working with other, least part about YGT working alone</p>
+      <p style="background-color: white;">Corey Robinson, Sandtown middle, 7th Grade, video games, 12, favorite part about YGT working with other, least part about YGT working alone</p>
       <div>
         <h1>
           Jalen Tyler
