--- a/api.html
+++ b/api.html
@@ -46,11 +46,17 @@
                 <h3 id="coreyMovieTitle">???</h3>
                 <p id="coreyMovieDescription">???</p>
                 <img id="coreyMoviePicture"src="https://miro.medium.com/v2/resize:fit:620/1*kwN_Y8GNf2ZB6sNQxngVyw@2x.jpeg">???</img>
+            </div></div>
+            <button type="submit" onclick="return loadTysonMovie()">Reveal Tyson's favorite movie</button>
+            <div>
+                <h3 id="tysonMovieTitle">???</h3>
+                <p id="tysonMovieDescription">???</p>
+                <img id="tysonMoviePicture"src="https://miro.medium.com/v2/resize:fit:620/1*kwN_Y8GNf2ZB6sNQxngVyw@2x.jpeg">???</img>
             </div>
             <link rel="stylesheet" type="text/css" href="apistyle.css"/>
         <script>
             async function loadMovie() {
-                const apiResponse = await fetch('https://api.themoviedb.org/3/search/movie?query=cars%202&api_key=1785381337e0e60f964d9e8112b6d400');
+                const apiResponse = await fetch('https://api.themoviedb.org/3/search/movie?query=spider-man%20across%20the%20spider-verse&api_key=1785381337e0e60f964d9e8112b6d400');
                 console.log(apiResponse);
                 const responseJson = await apiResponse.json();
                 document.getElementById('movieTitle').innerHTML = responseJson.results[0].original_title
@@ -58,12 +64,20 @@
                 document.getElementById('moviePicture').src ="https://image.tmdb.org/t/p/original"+ responseJson.results[0].poster_path
             }
             async function loadCoreyMovie() {
-                const apiResponse = await fetch('https://api.themoviedb.org/3/search/movie?query=ready%20player%201&api_key=1785381337e0e60f964d9e8112b6d400');
+                const apiResponse = await fetch('https://api.themoviedb.org/3/search/movie?query=the%20spongebob%20squarepants%20movie&api_key=1785381337e0e60f964d9e8112b6d400');
                 console.log(apiResponse);
                 const responseJson = await apiResponse.json();
                 document.getElementById('coreyMovieTitle').innerHTML = responseJson.results[0].original_title
                 document.getElementById('coreyMovieDescription').innerHTML = responseJson.results[0].overview
                 document.getElementById('coreyMoviePicture').src ="https://image.tmdb.org/t/p/original"+ responseJson.results[0].poster_path
+            
+            }async function loadTysonMovie() {
+                const apiResponse = await fetch('https://api.themoviedb.org/3/search/movie?query=ready%20player%201&api_key=1785381337e0e60f964d9e8112b6d400');
+                console.log(apiResponse);
+                const responseJson = await apiResponse.json();
+                document.getElementById('tysonMovieTitle').innerHTML = responseJson.results[0].original_title
+                document.getElementById('tysonMovieDescription').innerHTML = responseJson.results[0].overview
+                document.getElementById('tysonMoviePicture').src ="https://image.tmdb.org/t/p/original"+ responseJson.results[0].poster_path
             }
         </script>
 
