--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <div class="carousel-item active">
                         <img src="https://i.pinimg.com/736x/ee/fd/c4/eefdc4111e5a3eeffb5a5a8f573be522.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h5>Corey</h5>
+                            <p>Characters!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -54,10 +54,10 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="https://cdn.akamai.steamstatic.com/steam/apps/359550/capsule_616x353.jpg?t=1710500518" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <h5>Tyson</h5>
+                            <p>This is my favorite video game, Rainbow Six Siege.</p>
                         </div>
                     </div>
                 </div>
