--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <nav>
                 <div class="logo">
-
+                    <span>Python Pirates</span>
                 </div>
                 <div class="menu">
                     <ul>
